server_error_utf8.txt
node.exe : C:\Users\EMM
A\Desktop\learn\learnau
lt-api\src\config\datab
ase.ts:1
At line:1 char:1
+ & "C:\nvm4w\nodejs/no
de.exe" "C:\Users\EMMA\
AppData\Roaming\npm/nod
e_ ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\EMMA   
 \D...g\database.ts    
:1:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
import { PrismaClient 
} from '@prisma/client'
         ^

SyntaxError: The 
requested module 
'@prisma/client' does 
not provide an export 
named 'PrismaClient'
    at 
ModuleJob._instantiate 
(node:internal/modules/
esm/module_job:228:21)
    at async 
ModuleJob.run (node:int
ernal/modules/esm/modul
e_job:337:5)
    at async onImport.t
racePromise.__proto__ (
node:internal/modules/e
sm/loader:665:26)
    at async asyncRunEn
tryPointWithESMLoader (
node:internal/modules/r
un_main:117:5)

Node.js v22.20.0
